--- a/estilo.css
+++ b/estilo.css
@@ -90,6 +90,7 @@ header nav ul li a:hover {
 
 .menu-item img {
     width: 100%;
+    height: 100%;
     max-width: 200px;
     border-radius: 8px;
 
