--- a/estilo.css
+++ b/estilo.css
@@ -82,15 +82,13 @@ header nav ul li a:hover {
     flex-direction: column;
     align-items: center;
     padding: 15px;
-    text-align: center;}
-
+}
 
 
 
 
 .menu-item img {
     width: 100%;
-    height: 100%;
     max-width: 200px;
     border-radius: 8px;
 
