--- a/estilo.css
+++ b/estilo.css
@@ -77,6 +77,7 @@ header nav ul li a:hover {
     width: 100%;
     max-width: 200px;
     border-radius: 8px;
+    align-items: center;
 }
 
 .item-info p {
