--- a/estilo.css
+++ b/estilo.css
@@ -120,7 +120,7 @@
 
     /* Contato */
     #contato {
-        background-color:#8d4f19; /* Cor de fundo para a seção de contato */
+        background-color:#a85917; /* Cor de fundo para a seção de contato */
         padding: 20px;
         text-align: center;
         color: #333; /* Cor do texto */
