--- a/estilo.css
+++ b/estilo.css
@@ -88,6 +88,7 @@
         align-items: center;
         padding: 15px;
         text-align: center;
+        align-items: center;
     }
 
     .menu-item img {
