--- a/estilo.css
+++ b/estilo.css
@@ -74,7 +74,8 @@
     .menu-container {
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-        gap: 20px;
+        gap: 20px
+        justify-content: center;
         align-items: center;
     }
 
