--- a/estilo.css
+++ b/estilo.css
@@ -67,6 +67,13 @@
     }
 
     /* Menu */
+    .menu {
+        color: #333;
+        align-items: center;
+        font-size:10px;
+        font-family: Arial, Helvetica, sans-serif;
+
+    }
     .section {
         padding: 20px;
     }
@@ -143,5 +150,3 @@
         margin-top: 20px;
     }
 
-    h2{ text-align: center;}
-    p {text-align: center;}
