--- a/estilo.css
+++ b/estilo.css
@@ -71,7 +71,7 @@
         color: #070303;
         font-size:px;
         font-family: Arial, Helvetica, sans-serif;
-        text-align: center;
+        justify-content: center;
         
     }
     .section {
