--- a/estilo.css
+++ b/estilo.css
@@ -69,10 +69,9 @@
     /* Menu */
     .separacao {
         color: #070303;
-        font-size:px;
+        font-size: 16px;
         font-family: Arial, Helvetica, sans-serif;
-        justify-content: center;
-        
+        text-align: center;
     }
     .section {
         padding: 20px;
@@ -81,8 +80,7 @@
     .menu-container {
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-        gap: 20px
-        justify-content: center;
+        gap: 20px; 
         align-items: center;
     }
 
@@ -96,21 +94,14 @@
         align-items: center;
         padding: 15px;
         text-align: center;
-        align-items: center;
     }
 
     .menu-item img {
-        width: 100%;
-        max-width: 200px;
-        border-radius: 8px;
-
-    }
-    img {
         width: 200px;
         height: 200px;
+        border-radius: 8px;
     }
-
-
+    
     .item-info {
         margin-top: 10px;
     }
