--- a/estilo.css
+++ b/estilo.css
@@ -142,3 +142,93 @@
     h2{ text-align: center;}
     p {text-align: center;}
 
+ /* botao */
+ #backToTop {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    font-size: 1.5rem;
+    text-align: center;
+    cursor: pointer;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
+}
+
+#backToTop:hover {
+    background-color: #555;
+}
+
+@media (min-width: 768px) {
+    #backToTop {
+        display: none !important; 
+    }
+}
+
+/* Cores padrão (modo claro) */
+body {
+background-color: #f5f5f5;
+color: #333;
+transition: background-color 0.3s, color 0.3s; /* Transição suave */
+}
+
+/* Botão para alternar o modo */
+@media (max-width: 768px) {
+#darkModeToggle {
+    bottom: 20px; 
+    right: 20px; 
+    top: auto; 
+    position: fixed;
+    width: 60px; 
+    height: 60px; 
+    font-size: 1.5rem; 
+    border-radius: 50%; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+}
+
+#darkModeToggle {
+position: fixed;
+top: 20px;
+right: 20px;
+background-color: #333;
+color: #fff;
+border: none;
+padding: 10px 15px;
+border-radius: 5px;
+cursor: pointer;
+font-size: 1rem;
+z-index: 1000; /* Fica sempre visível */
+}
+
+#darkModeToggle:hover {
+background-color: #555;
+}
+
+/* Modo escuro */
+body.dark-mode {
+background-color: #121212;
+color: #f5f5f5;
+}
+
+/* Ajustes para outros elementos no modo escuro */
+header.dark-mode, footer.dark-mode {
+background-color: #222;
+}
+
+.menu-item.dark-mode {
+background-color: #333;
+color: #f5f5f5;
+}
+
